--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "devDependencies": {
     "del": "^2.0.2",
+    "express": "^4.16.4",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "latest",
     "gulp-csso": "^2.0.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-uglify": "^2.0.0",
-    "run-sequence": "^1.2.2",
-    "http-server": "latest"
+    "http-server": "latest",
+    "https": "^1.0.0",
+    "http": "0.0.0",
+    "run-sequence": "^1.2.2"
   },
   "engines": {
     "node": ">=0.12.0"
